Fixed the behavior of the log panels by adding wrapping div

--- a/src/ui/src/app/shared/css/main.css
+++ b/src/ui/src/app/shared/css/main.css
@@ -384,7 +384,7 @@ div.chart-container {
 }
 
 .raw-collapsed {
-  height: 10em;
+  height: 15em;
 }
 
 /*.raw-output-toggle {
